# Simple-Web-Personal

./: .gitignore  README.md
server_flask/: command.py  config.py  pyproject.toml  serve.py  tables.sql  webgui.py
server_flask/app/: __init__.py
server_flask/app/depends/: depend.py
server_flask/app/routes/: route.py
server_flask/app/static/: index.html
server_flask/app/static/_nuxt/: B3hOU0Pz.js  B5VVKk4a.js  B6RXN_Nt.js  BDt75oMD.js  BF1JvfLe.js  Bk6xWCvb.js  Buwo0p3Q.js  ByTOEtsz.js  C1_oNB8S.js  C1b5aKb8.js  C8to--9U.js  CRpCPpuF.js  CUplRSS5.js  CV-FF00I.js  CerTWNt3.js  CoZNKlh6.js  CodNqcuE.js  Ct8P3vGH.js  CtZpvTUp.js  Cw2bDzlL.js  D0jjOCwS.js  D5zivnV_.js  D6RvNOzB.js  DAXjNXYm.js  DONSqImL.js  D_7QVLHn.js  Dk8JoGjq.js  DuK9XnEk.js  DyguuA3N.js  entry.BtvHMyXA.css  j1uI_7uR.js  kNwMBDM_.js  oqkQcZgk.js  wNHGNb30.js
server_flask/app/static/assets/: AddressesForm-1jtcuBbi.js  AddressesForm-C_hzpKv6.js  AddressesForm-CdEhIfmw.js  AddressesItem-CGlYWfTv.js  AddressesItem-Cutgsnoj.js  AddressesItem-yrsgSL3z.js  AffilationsForm-ClSQ8ojp.js  AffilationsForm-D9VJFjVz.js  AffilationsForm-DIfVKPha.js  AffilationsItem-BrCnwytV.js  AffilationsItem-DY95Q2Vl.js  AffilationsItem-HI1mXSqj.js  ChecksForm-BYSQ9R1x.js  ChecksForm-BaXGXkj2.js  ChecksForm-DnEMvAYa.js  ChecksItem--of_iwsT.js  ChecksItem-DS8G4roW.js  ChecksItem-DVLp3Rw_.js  ContactsForm-DZIvP0An.js  ContactsForm-ZHLoo6W9.js  ContactsForm-nuu4Otsc.js  ContactsItem-Brk5lgJt.js  ContactsItem-CsG2APfx.js  ContactsItem-DIJ07XFs.js  DocumentsForm-BSuBQxUz.js  DocumentsForm-CRHLmhLj.js  DocumentsForm-DO86T1Xk.js  (+64 more)
(+72 files in other folders)
